Small tweaks to theme name for differentiation in WordPress dashboard

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 ﻿/*!
-Theme Name: 	Page Builder Framework
+Theme Name: 	Nutricura - Page Builder Framework
 Theme URI:		https://wp-pagebuilderframework.com
 Author: 		David Vongries
 Author URI: 	https://mapsteps.com
